--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build and push base Docker image
+      - name: Build and push base SDK Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -21,7 +21,7 @@ jobs:
           path: sdk-base
           tags: base
 
-      - name: Build and push android-28 Docker image
+      - name: Build and push android-28 SDK Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -31,7 +31,7 @@ jobs:
           build_args: ANDROID_PLATFORM_VERSION=android-28
           tags: android-28
 
-      - name: Build and push android-29 Docker image
+      - name: Build and push android-29 SDK Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -41,12 +41,51 @@ jobs:
           build_args: ANDROID_PLATFORM_VERSION=android-29
           tags: android-29
 
-      - name: Build and push android-30 Docker image
+      - name: Build and push android-30 SDK Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-sdk
           path: sdk-platform
+          build_args: ANDROID_PLATFORM_VERSION=android-30
+          tags: android-30
+
+      - name: Build and push base NDK Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kremi151/android-ndk
+          path: ndk-base
+          tags: base
+
+      - name: Build and push android-28 NDK Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kremi151/android-ndk
+          path: ndk-platform
+          build_args: ANDROID_PLATFORM_VERSION=android-28
+          tags: android-28
+
+      - name: Build and push android-29 NDK Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kremi151/android-ndk
+          path: ndk-platform
+          build_args: ANDROID_PLATFORM_VERSION=android-29
+          tags: android-29
+
+      - name: Build and push android-30 NDK Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kremi151/android-ndk
+          path: ndk-platform
           build_args: ANDROID_PLATFORM_VERSION=android-30
           tags: android-30
