--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-sdk
           path: sdk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-28
+          build_args: ANDROID_PLATFORM_VERSION=android-28,ANDROID_BUILD_TOOLS_VERSION=28.0.3
           tags: android-28
 
       - name: Build and push android-29 SDK Docker image
@@ -40,7 +40,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-sdk
           path: sdk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-29
+          build_args: ANDROID_PLATFORM_VERSION=android-29,ANDROID_BUILD_TOOLS_VERSION=29.0.3
           tags: android-29
 
       - name: Build and push android-30 SDK Docker image
@@ -50,7 +50,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-sdk
           path: sdk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-30
+          build_args: ANDROID_PLATFORM_VERSION=android-30,ANDROID_BUILD_TOOLS_VERSION=30.0.2
           tags: android-30
 
       - name: Build and push base NDK Docker image
@@ -69,7 +69,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-ndk
           path: ndk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-28
+          build_args: ANDROID_PLATFORM_VERSION=android-28,ANDROID_BUILD_TOOLS_VERSION=28.0.3
           tags: android-28
 
       - name: Build and push android-29 NDK Docker image
@@ -79,7 +79,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-ndk
           path: ndk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-29
+          build_args: ANDROID_PLATFORM_VERSION=android-29,ANDROID_BUILD_TOOLS_VERSION=29.0.3
           tags: android-29
 
       - name: Build and push android-30 NDK Docker image
@@ -89,5 +89,5 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kremi151/android-ndk
           path: ndk-platform
-          build_args: ANDROID_PLATFORM_VERSION=android-30
+          build_args: ANDROID_PLATFORM_VERSION=android-30,ANDROID_BUILD_TOOLS_VERSION=30.0.2
           tags: android-30
