--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,11 @@ jobs:
       - name: Build platform images
         run: ./scripts/build-platform-images.sh
 
-      - name: Push images
-        run: ./scripts/push-images.sh
+      - name: Docker login
+        run: echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_USERNAME --password-stdin
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Push images
+        run: ./scripts/push-images.sh
