Upgrade NDK to r21d

--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -2,7 +2,7 @@ FROM kremi151/android-sdk:base
 
 ENV CMAKE_VERSION 3.18
 ENV CMAKE_PATCH_VERSION 3
-ENV ANDROID_NDK_VERSION r21c
+ENV ANDROID_NDK_VERSION r21d
 ENV NINJA_VERSION 1.10.1
 
 ENV ANDROID_NDK_HOME /opt/android-ndk
