Add scripts to generate local.properties (#2)

--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -8,13 +8,16 @@ ENV NINJA_VERSION 1.10.1
 ENV ANDROID_NDK_HOME /opt/android-ndk
 ENV CMAKE_HOME /opt/cmake
 
+COPY android-scripts/* /opt/android-scripts/
+
 RUN mkdir -p /opt/tmp \
     && cd /opt/tmp \
     && wget https://dl.google.com/android/repository/android-ndk-${ANDROID_NDK_VERSION}-linux-x86_64.zip -O android-ndk.zip \
     && unzip -q android-ndk.zip \
     && mv ./android-ndk-${ANDROID_NDK_VERSION} ${ANDROID_NDK_HOME} \
     && cd ${ANDROID_NDK_HOME} \
-    && rm -rf /opt/tmp
+    && rm -rf /opt/tmp \
+    && find /opt/android-scripts/ -type f -iname "*" -exec chmod -v +x {} \;
 
 ENV PATH ${ANDROID_NDK_HOME}/prebuilt/linux-x86_64/bin:${PATH}
 
