--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,9 +1,9 @@
 FROM kremi151/android-sdk:base
 
-ENV CMAKE_VERSION 3.18
-ENV CMAKE_PATCH_VERSION 4
-ENV ANDROID_NDK_VERSION r21d
-ENV NINJA_VERSION 1.10.1
+ENV CMAKE_VERSION 3.19
+ENV CMAKE_PATCH_VERSION 6
+ENV ANDROID_NDK_VERSION r21e
+ENV NINJA_VERSION 1.10.2
 
 ENV ANDROID_NDK_HOME /opt/android-ndk
 ENV CMAKE_HOME /opt/cmake
