--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,4 +1,5 @@
-FROM kremi151/android-sdk:base
+ARG OPENJDK_VERSION=11
+FROM kremi151/android-sdk-jdk${OPENJDK_VERSION}:base
 
 ENV CMAKE_VERSION 3.19
 ENV CMAKE_PATCH_VERSION 6
