--- a/ndk-platform/Dockerfile
+++ b/ndk-platform/Dockerfile
@@ -1,4 +1,5 @@
-FROM kremi151/android-ndk:base
+ARG OPENJDK_VERSION=11
+FROM kremi151/android-ndk-jdk${OPENJDK_VERSION}:base
 
 ARG ANDROID_PLATFORM_VERSION
 ARG ANDROID_BUILD_TOOLS_VERSION
