--- a/sdk-platform/Dockerfile
+++ b/sdk-platform/Dockerfile
@@ -1,4 +1,5 @@
-FROM kremi151/android-sdk:base
+ARG OPENJDK_VERSION=11
+FROM kremi151/android-sdk-jdk${OPENJDK_VERSION}:base
 
 ARG ANDROID_PLATFORM_VERSION
 ARG ANDROID_BUILD_TOOLS_VERSION
