Move -jdkX suffixes to tag

--- a/ndk-platform/Dockerfile
+++ b/ndk-platform/Dockerfile
@@ -1,5 +1,5 @@
 ARG OPENJDK_VERSION=11
-FROM kremi151/android-ndk-jdk${OPENJDK_VERSION}:base
+FROM kremi151/android-ndk:base-jdk${OPENJDK_VERSION}
 
 ARG ANDROID_PLATFORM_VERSION
 ARG ANDROID_BUILD_TOOLS_VERSION
