--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,5 +1,5 @@
 ARG OPENJDK_VERSION=11
-FROM kremi151/android-sdk-jdk${OPENJDK_VERSION}:base
+FROM kremi151/android-sdk:base-jdk${OPENJDK_VERSION}
 
 ENV CMAKE_VERSION 3.19
 ENV CMAKE_PATCH_VERSION 6
