--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,9 +1,9 @@
 ARG OPENJDK_VERSION=11
 FROM kremi151/android-sdk:base-jdk${OPENJDK_VERSION}
 
-ENV CMAKE_VERSION 3.19
-ENV CMAKE_PATCH_VERSION 6
-ENV ANDROID_NDK_VERSION r21e
+ENV CMAKE_VERSION 3.26
+ENV CMAKE_PATCH_VERSION 4
+ENV ANDROID_NDK_VERSION r25c
 ENV NINJA_VERSION 1.10.2
 
 ENV ANDROID_NDK_HOME /opt/android-ndk
