Use Eclipse Temurin and drop support for JDK 8

--- a/sdk-base/Dockerfile
+++ b/sdk-base/Dockerfile
@@ -1,5 +1,5 @@
 ARG OPENJDK_VERSION=11
-FROM adoptopenjdk/openjdk${OPENJDK_VERSION}:alpine
+FROM eclipse-temurin:${OPENJDK_VERSION}-alpine
 
 ENV ANDROID_HOME /opt/android-sdk
 
