Load tool versions from .env

--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,9 +1,9 @@
 ARG OPENJDK_VERSION=11
+ARG CMAKE_VERSION=1.2.3
+ARG NINJA_VERSION=1.2.3
 FROM kremi151/android-sdk:base-jdk${OPENJDK_VERSION}
 
-ENV CMAKE_VERSION 3.26.4
 ENV ANDROID_NDK_VERSION r25c
-ENV NINJA_VERSION 1.10.2
 
 ENV ANDROID_NDK_HOME /opt/android-ndk
 ENV CMAKE_HOME /opt/cmake
