Move build args

--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -1,7 +1,8 @@
-ARG OPENJDK_VERSION=11
-ARG CMAKE_VERSION=1.2.3
-ARG NINJA_VERSION=1.2.3
+ARG OPENJDK_VERSION=17
 FROM kremi151/android-sdk:base-jdk${OPENJDK_VERSION}
+
+ARG CMAKE_VERSION
+ARG NINJA_VERSION
 
 ENV ANDROID_NDK_VERSION r25c
 
