Install ninja via package manager

--- a/ndk-base/Dockerfile
+++ b/ndk-base/Dockerfile
@@ -2,7 +2,6 @@ ARG OPENJDK_VERSION=17
 FROM kremi151/android-sdk:base-jdk${OPENJDK_VERSION}
 
 ARG CMAKE_VERSION
-ARG NINJA_VERSION
 
 ENV ANDROID_NDK_VERSION r25c
 
@@ -27,14 +26,8 @@ RUN mkdir -p ${CMAKE_HOME} \
     && wget https://github.com/Kitware/CMake/releases/download/v${CMAKE_VERSION}/cmake-${CMAKE_VERSION}-linux-x86_64.tar.gz -O cmake.tar.gz \
     && tar -xzf cmake.tar.gz \
     && rm cmake.tar.gz \
-    && apk --no-cache add libc6-compat
+    && apk --no-cache add libc6-compat ninja-build
 
 ENV CMAKE_HOME ${CMAKE_HOME}/cmake-${CMAKE_VERSION}-linux-x86_64
 
-ENV PATH ${CMAKE_HOME}/bin:${PATH}
-
-RUN cd ${CMAKE_HOME}/bin \
-    && wget https://github.com/ninja-build/ninja/releases/download/v${NINJA_VERSION}/ninja-linux.zip \
-    && unzip -q ninja-linux.zip -d . \
-    && rm ninja-linux.zip \
-    && ls -l ${CMAKE_HOME}/bin
+ENV PATH ${CMAKE_HOME}/bin:/usr/lib/ninja-build/bin:${PATH}
